--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Gearoid76/web-server#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "hbs": "^4.1.0"
+    "hbs": "^4.1.0",
+    "request": "^2.88.0"
   }
 }
