--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.1.1",
+    "hps": "^1.1.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
