--- a/package.json
+++ b/package.json
@@ -4,27 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e js,hbs" 
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Gearoid76/web-server.git"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Gearoid76/web-server/issues"
-  },
-  "homepage": "https://github.com/Gearoid76/web-server#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "hbs": "^4.1.1",
-    "hps": "^1.1.1",
+    "hbs": "^4.0.1",
     "request": "^2.88.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.2.0"
   }
 }
