--- a/package.json
+++ b/package.json
@@ -4,14 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs" 
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Gearoid76/web-server.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Gearoid76/web-server/issues"
+  },
+  "homepage": "https://github.com/Gearoid76/web-server#readme",
   "dependencies": {
     "express": "^4.16.4",
-    "hbs": "^4.0.1",
+    "hbs": "^4.1.1",
+    "hps": "^1.1.1",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.2.0"
   }
 }
