--- a/package.json
+++ b/package.json
@@ -1,30 +1,16 @@
 {
-  "name": "web-server",
+  "name": "weather-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e js,hbs" 
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Gearoid76/web-server.git"
+    "start": "node src/app.js" 
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Gearoid76/web-server/issues"
-  },
-  "homepage": "https://github.com/Gearoid76/web-server#readme",
+  "description": "",
   "dependencies": {
-    "express": "^4.16.4",
-    "hbs": "^4.1.1",
-    "hps": "^1.1.1",
-    "request": "^2.88.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.2.0"
+    "request": "^2.88.0",
+    "yargs": "^15.1.0"
   }
 }
